--- a/movie_recommender/movies/static/css/style.css
+++ b/movie_recommender/movies/static/css/style.css
@@ -1,3 +1,4 @@
+/* Allgemeines Styling */
 body {
     background-color: #121212;
     color: #fff;
@@ -44,4 +45,63 @@ h1 {
 
 .search-btn:hover {
     background-color: #09269b;
+}
+
+/* Filmübersicht */
+.movie-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 45px;
+    justify-content: center;
+    padding: 20px;
+    margin-top: 20px;
+}
+
+.movie-card {
+    width: 160px;
+    background-color: #1e1e1e;
+    border-radius: 10px;
+    text-align: center;
+    padding: 10px;
+}
+
+.movie-card img {
+    width: 100%;
+    border-radius: 5px;
+}
+
+.movie-card:hover {
+    transform: scale(1.05);
+}
+
+.movie-title {
+    font-size: 14px;
+    margin-top: 8px;
+}
+
+.movie-rating {
+    font-size: 12px;
+    color: #ffcc00;
+}
+
+.result-search {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 2em;
+    padding: 0 10%;
+}
+
+.result-search .searched-term {
+    flex: 1;
+    font-size: 18px;
+    color: #fff;
+}
+
+.no-results {
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    padding: 2em 0;
+    color: #ffcc00;
 }
